# solana-arcade

./: .env.example  .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/: next.config.mjs  next.config.ts  package.json
app/src/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
app/src/app/components/: ClientWrapper.tsx  DepositModal.tsx  Game.tsx  GameOverModal.tsx  Header.tsx  WalletConnect.tsx
app/src/hooks/: useCredits.ts  useGame.ts  useGameState.ts
app/src/program/: idl.ts  index.ts
app/src/types/: react-tetris.d.ts
app/src/types/program/: index.ts  solana-arcade.ts
app/src/utils/: hash.ts
programs/solana-arcade/: Cargo.toml
programs/solana-arcade/src/: lib.rs
scripts/: deploy-devnet.sh  initialize-game.ts
tests/: solana-arcade.ts
