[package]
name = "solana-arcade"
version = "0.1.0"
description = "Solana Arcade - Decentralized Tetris Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_arcade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = ["init-if-needed"] }
anchor-spl = "=0.27.0"
solana-program = "=1.14.17"
